# F1-2025_Telemetry-Software

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
f1-dashboard/: .env  .gitignore  Dockerfile  make_icon.js  package-lock.json  package.json  vite.config.ts
f1-dashboard/src/: App.tsx  index.css
f1-dashboard/src-tauri/: Cargo.toml  tauri.conf.json
f1-dashboard/src-tauri/src/: lib.rs  main.rs
f1-dashboard/src/components/: CarMonitor.tsx  GearIndicator.tsx  LapTimeMonitor.tsx  ScaleWrapper.tsx  StatusHeader.tsx  TimingTower.css  TimingTower.tsx  TrackProgressMap.tsx
f1-dashboard/src/data/: teamColors.ts  trackPaths.ts
f1-dashboard/src/hooks/: useTelemetry.ts
f1-dashboard/src/telemetry/: formatters.ts  types.ts
f1-dashboard/src/telemetry/handlers/: carStatusHandler.ts  lapDataHandler.ts  sessionHandler.ts  telemetryHandler.ts
src/: main.cpp
src/models/: Car.hpp  CarStatus.hpp  CarTelemetry.hpp  Lap.hpp  Participant.hpp  Session.hpp  SessionHistory.hpp
src/network/: UDPListener.cpp  UDPListener.h
src/parser/: F1Structs.h  PacketParser.cpp  PacketParser.h
